<resources>
    <string name="app_name">TMDb</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="Description_image_no_internet">Image if there is not internet connection</string>
    <string name="no_info">no info</string>
    <string name="search_hint">Search</string>
    <string name="title_movie">Movie</string>
    <string name="title_celebrities">Celebrities</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="text_average">/10</string>

    <!--    genre-->
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_music">Music</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>

    <!-- Preference Titles -->
    <string name="title_preference_sort">Sorting</string>
    <string name="title_preference_theme">Theme</string>
    <string name="title_parameters_sort">Sorting parameter</string>


    <!-- Preference Vales -->
    <string name="value_day_theme">Day</string>
    <string name="value_night_theme">Night</string>
    <string name="no_internet">no internet connection</string>
    <string name="movie_poster">Movie poster</string>
    <string name="title_name">Name</string>
    <string name="title_genre">Genre</string>
    <string name="title_release_date">Release date</string>
    <string name="title_vote_average">Vote average</string>
    <string name="default_value_overview">Оverview</string>
    <string name="default_text_title">title</string>
    <string name="default_text_date">0000</string>
    <string name="default_text_average">0.0/10</string>
    <string name="default_text_genre">genre</string>
    <string name="text_retry_button">Retry</string>
    <string name="subtitle_favorite_movies">Favorite Movies</string>
    <!-- Preference Titles -->

</resources>